Fixed responsiveness issue on smaller mobile phones. Added icons. Going to work on enabling scroll only on the modal window when it is open next.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -20,7 +20,6 @@
 }
 
 body {
-    display: grid;
     font-family: var(--font);
     background-color: var(--background);
     background-image: radial-gradient(#040404 0.5px, transparent 0.5px), radial-gradient(#040404 0.5px, var(--background) 0.5px);
@@ -30,7 +29,6 @@ body {
     width: 100vw;
     height: 100vh;
     overflow-x: hidden;
-    place-items: center;
 }
 
 .jobs-container {
