--- a/public/css/modal-window.css
+++ b/public/css/modal-window.css
@@ -18,9 +18,12 @@
     box-shadow: var(--shadow);
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .modal-title {
+    margin-top: 5%;
+    max-width: 70%;
     font-size: 1.5rem;
     font-weight: 700;
     margin-bottom: 0;
@@ -94,12 +97,13 @@
     height: 100vh;
     position: fixed;
     z-index: 2;
+    top: 0;
     transition: 0.1s ease-in-out;
 }
 
 @media (max-width: 600px) {
     .modal {
-        width: 80%;
-        height: 80%;
+        width: 85%;
+        height: 90%;
     }
 }
